# Data_Visualization

./: CMakeLists.txt  LICENSE  Main.qml  README.md  customplotitem.cpp  customplotitem.h  databasemanager.cpp  databasemanager.h  dataprocessor.cpp  dataprocessor.h  datareceiver.cpp  datareceiver.h  main.cpp  mock_sensor.py
